@@ -34,8 +34,7 @@ TAO_Profile::TAO_Profile (CORBA::ULong tag,
     , tag_ (tag)
     , orb_core_ (orb_core)
     , forward_to_ (0)
-    , refcount_ (this->orb_core_->
-                   client_factory ()->create_profile_refcount ())
+    , refcount_ (1)
     , tagged_profile_lock_ ()
     , tagged_profile_created_ (false)
 {
@@ -54,8 +53,7 @@ TAO_Profile::TAO_Profile (CORBA::ULong tag,
     , tag_ (tag)
     , orb_core_ (orb_core)
     , forward_to_ (0)
-    , refcount_ (this->orb_core_->
-                   client_factory ()->create_profile_refcount ())
+    , refcount_ (1)
     , tagged_profile_lock_ ()
     , tagged_profile_created_ (false)
 {
